--- a/css/details.css
+++ b/css/details.css
@@ -653,6 +653,11 @@ Media query for smaller screen */
   .icon-dot {
     display: none;
   }
+
+  .top-content {
+    border: none;
+    position: fixed;
+  }
 }
 
 @media screen and (max-width: 782px) {
