--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -665,7 +665,12 @@ td {
     border: none;
   }
 
-  body {
-    overflow-x: hidden;
+  .requests {
+    overflow-y: hidden;
+  }
+
+  .top-content {
+    border: none;
+    position: fixed;
   }
 }
