--- a/css/inspectionlist.css
+++ b/css/inspectionlist.css
@@ -524,8 +524,13 @@ tr {
 
   header .btn-new-inspection {
     padding: 0px;
-    height: 40px;
+    height: 30px;
+    margin-left: 5px;
     white-space: nowrap;
+  }
+
+  .search-sort {
+    display: none;
   }
 
   header h1 {
