--- a/css/details.css
+++ b/css/details.css
@@ -14,6 +14,7 @@ body {
   align-items: center;
   min-height: 100vh;
   max-width: 100%;
+  background-color: #fffbf6;
 }
 main {
   width: 100%;
@@ -104,7 +105,8 @@ main {
 
 .top-content select {
   display: flex;
-  background-color: #ffffff;
+  background-color: #fffbf6;
+
   border: none;
   outline: none;
 }
@@ -658,6 +660,11 @@ Media query for smaller screen */
     border: none;
     position: fixed;
     margin-top: 13px;
+  }
+
+  .top-content img {
+    width: 1rem;
+    /* height: 0.4rem; */
   }
 }
 
