--- a/css/form.css
+++ b/css/form.css
@@ -14,6 +14,7 @@ body {
   align-items: center;
   min-height: 100vh;
   max-width: 100%;
+  background-color: #fffbf6;
 }
 main {
   width: 100%;
@@ -89,7 +90,7 @@ main {
   width: 100%;
   height: 60px;
   border-bottom: 1.2px solid #eeeeee;
-  background-color: #ffffff;
+  background-color: #fffbf6;
 }
 
 .top-content {
@@ -105,7 +106,8 @@ main {
 
 .top-content select {
   display: flex;
-  background-color: #ffffff;
+  background-color: #fffbf6;
+
   border: none;
   outline: none;
 }
@@ -205,7 +207,8 @@ header .btn-new-inspection {
   min-height: 1216px;
   height: 100%;
   border-right: 1.2px solid #eeeeee;
-  background-color: #ffffff;
+  background-color: #fffbf6;
+
   position: fixed;
   top: 0;
   left: 0;
@@ -216,7 +219,6 @@ header .btn-new-inspection {
   display: flex;
   width: 166px;
   height: 52px;
-  margin-top: 77px; /*I might comeback to adjust */
 }
 
 .trm {
@@ -308,7 +310,8 @@ section {
   margin: 0 auto;
   /* padding: 20px; */
 
-  background-color: #fff;
+  background-color: #fffbf6;
+
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   border: none;
@@ -391,6 +394,7 @@ hr {
   font-size: 14px;
   border: none;
   outline: none;
+  background-color: #fffbf6;
 }
 .form-row {
   display: flex;
@@ -430,6 +434,7 @@ hr {
   font-size: 14px;
   border: none;
   border-radius: 4px;
+  background-color: #fffbf6;
 }
 
 .form-row .form-group {
@@ -686,4 +691,13 @@ hr {
     position: fixed;
     margin-top: 12px;
   }
+
+  .top-content img {
+    width: 1rem;
+    /* height: 0.4rem; */
+  }
+
+  /* #state {
+    background-color: #ffffff;
+  } */
 }
