--- a/css/inspectionlist.css
+++ b/css/inspectionlist.css
@@ -14,6 +14,7 @@ body {
   align-items: center;
   min-height: 100vh;
   max-width: 100%;
+  background-color: #fffbf6;
 }
 main {
   width: 100%;
@@ -87,7 +88,7 @@ main {
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 60px;
+  height: 50px;
   border-bottom: 1.2px solid #eeeeee;
 }
 
@@ -106,7 +107,7 @@ main {
   display: flex;
   border: none;
   outline: none;
-  background-color: #ffffff;
+  background-color: #fffbf6;
 }
 
 .notifiction {
@@ -527,6 +528,7 @@ tr {
     height: 30px;
     margin-left: 5px;
     white-space: nowrap;
+    font-size: 9px;
   }
 
   .search-sort {
@@ -545,6 +547,14 @@ tr {
     border: none;
     position: fixed;
     margin-top: 13px;
-    margin-left: 300px;
+    /* margin-left: 300px; */
+  }
+
+  .top-content img {
+    width: 1rem;
+    /* height: 0.4rem; */
+  }
+  .top-container {
+    width: 100%;
   }
 }
