--- a/css/login.css
+++ b/css/login.css
@@ -90,7 +90,7 @@ form {
   flex-direction: column;
   gap: 1rem;
   /* padding: 2rem; */
-  background-color: #fff;
+  background-color: #fffbf6;
 }
 .form-group label {
   font-size: 1.6rem;
@@ -111,6 +111,7 @@ form {
   font-size: 1.6rem;
   color: #000;
   font-weight: 400;
+  background-color: #fffbf6;
 }
 .form-group div input::placeholder {
   color: #afb0b1;
