--- a/css/report.css
+++ b/css/report.css
@@ -14,6 +14,7 @@ body {
   align-items: center;
   min-height: 100vh;
   max-width: 100%;
+  background-color: #fffbf6;
 }
 .main-content {
   width: 100%;
@@ -102,7 +103,8 @@ body {
 
 .top-content select {
   display: flex;
-  background-color: #ffffff;
+  background-color: #fffbf6;
+
   border: none;
   outline: none;
 }
@@ -156,7 +158,8 @@ header p {
   min-height: 1216px;
   height: 100%;
   border-right: 1.2px solid #eeeeee;
-  background-color: #ffffff;
+  background-color: #fffbf6;
+
   position: fixed;
   top: 0;
   left: 0;
@@ -167,7 +170,7 @@ header p {
   display: flex;
   width: 166px;
   height: 52px;
-  margin-top: 77px; /*I might comeback to adjust */
+  /* margin-top: 77px; I might comeback to adjust */
 }
 
 .trm {
@@ -272,11 +275,14 @@ header p {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: #fffbf6;
+
   /* margin-right: 50px; */
 }
 .image-container img {
   width: 170px;
   height: 170px;
+  background-color: #fffbf6;
 }
 
 .details-container {
@@ -395,7 +401,8 @@ header p {
 .inside-circle {
   width: 70%;
   height: 70%;
-  background-color: #fff;
+  background-color: #fffbf6;
+
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -413,7 +420,8 @@ header p {
 
 .tabs-container {
   /* margin-top: 40px; */
-  background-color: #fff;
+  background-color: #fffbf6;
+
   border: 1px solid #d8d8d8;
   border-radius: 10px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -625,5 +633,10 @@ header p {
     border: none;
     position: fixed;
     margin-top: 13px;
+  }
+
+  .top-content img {
+    width: 1rem;
+    /* height: 0.4rem; */
   }
 }
