--- a/css/details.css
+++ b/css/details.css
@@ -211,7 +211,7 @@ header .btn-new-inspection {
   min-height: 1216px;
   height: 100%;
   border-right: 1.2px solid #eeeeee;
-  background-color: #ffffff;
+  background-color: #fffbf6;
   position: fixed;
   top: 0;
   left: 0;
@@ -222,7 +222,6 @@ header .btn-new-inspection {
   display: flex;
   width: 166px;
   height: 52px;
-  margin-top: 77px; /*I might comeback to adjust */
 }
 
 .trm {
