--- a/css/createnew.css
+++ b/css/createnew.css
@@ -390,7 +390,7 @@ a {
   margin: 0 auto;
   border-radius: 5px;
   border: 1px solid #eeeeee;
-  background-color: #ffffff;
+  background-color: #fffbf6;
   font-size: 16px;
   border-radius: 4px;
 }
