--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -662,11 +662,24 @@ td {
     display: none;
   }
 
+  header h1 {
+    font-size: 2rem;
+    font-weight: 400;
+  }
+
+  header p {
+    font-size: 0.8rem;
+  }
+
+  .bold {
+    font-size: 2.8rem;
+    font-weight: 700;
+  }
+
   .top-container {
     display: flex;
     /* margin-left: 80px; */
     align-items: center;
-    justify-content: center;
   }
 
   .top-content {
@@ -680,7 +693,6 @@ td {
   .top-content {
     border: none;
     position: fixed;
-    /* margin-top: 20px; */
   }
 
   .top-content img {
@@ -727,10 +739,5 @@ td {
 
   #main .shifted {
     margin-left: 0;
-  }
-
-  .hamburger {
-    font-size: 30px;
-    cursor: pointer;
   }
 }
