--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -181,7 +181,7 @@ header .btn-new-inspection {
 .logo-container {
   text-align: center;
   margin-bottom: 20px;
-  width: 215px;
+  /* width: 215px; */
   min-height: 1216px;
   height: 100%;
   border-right: 1.2px solid #eeeeee;
@@ -705,10 +705,10 @@ td {
   }
 
   .sidebar {
-    width: 10%;
+    width: 9%;
   }
   .logo-container {
-    width: 20%;
+    width: 15%%;
   }
 
   .requests-grey {
