--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -719,8 +719,9 @@ td {
     padding: 0px;
   }
   .logo img {
-    width: 90px;
+    width: 83px;
     height: 33px;
+    margin-left: -15px;
   }
 
   .overview a,
