--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -664,7 +664,64 @@ td {
   }
 
   header .btn-new-inspection {
-    display: none;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 12px;
+    padding: 15px 25px;
+    text-align: center;
+    text-decoration: none;
+    width: 12rem;
+    border-radius: 0.4rem;
+    position: relative;
+    background: linear-gradient(145deg, #ff9a3a, #ff7a00, #cc6300);
+    border: none;
+    box-shadow: 0 5px 10px rgba(255, 122, 0, 0.3);
+    transition: transform 0.2s, box-shadow 0.2s;
+    animation: gradientBackground 5s ease infinite;
+    overflow: hidden;
+    text-align: center;
+  }
+
+  #myBtn1::before,
+  #myBtn1::after {
+    content: "";
+    position: absolute;
+    width: 140%; /* Larger than button to cover it */
+    height: 140%;
+    background: rgba(255, 255, 255, 0.1);
+    transform: rotate(45deg);
+    transition: all 0.5s;
+  }
+
+  #myBtn1::before {
+    top: -50%;
+    left: -50%;
+    border-radius: 60%;
+  }
+
+  #myBtn1::after {
+    bottom: -50%;
+    right: -50%;
+    border-radius: 40%;
+  }
+
+  #myBtn1:hover::before,
+  #myBtn1:hover::after {
+    top: -70%;
+    left: -70%;
+    bottom: -70%;
+    right: -70%;
+  }
+
+  #myBtn1:hover {
+    box-shadow: 0 8px 15px rgba(255, 122, 0, 0.4);
+    transform: translateY(-3px);
+    animation: pulse 1s infinite;
+  }
+
+  #myBtn1:active {
+    box-shadow: 0 5px 10px rgba(255, 122, 0, 0.3);
+    transform: translateY(1px);
   }
 
   header h1 {
@@ -713,6 +770,7 @@ td {
   }
   .logo-container {
     width: 15%;
+    border: none;
   }
 
   .requests-grey {
@@ -721,12 +779,13 @@ td {
   .logo img {
     width: 83px;
     height: 33px;
+    margin-top: 0.5rem;
     margin-left: -15px;
   }
 
   .overview a,
   .request-grey a {
-    font-size: 10px;
+    font-size: 0.7rem;
   }
 
   /* #sidebarParent {
@@ -746,7 +805,11 @@ td {
   }
 
   img#canc {
-    margin-top: -15px;
+    margin-top: -0.4rem;
+  }
+
+  .trm {
+    margin-right: 20px;
   }
 
   /* li {
