--- a/css/details.css
+++ b/css/details.css
@@ -105,7 +105,12 @@ main {
 
 .top-content select {
   display: flex;
+  font-weight: 400;
+  font-size: 10px;
   background-color: #fffbf6;
+  color: #585858;
+  justify-content: center;
+  align-items: center;
 
   border: none;
   outline: none;
