--- a/css/inspectionlist.css
+++ b/css/inspectionlist.css
@@ -105,9 +105,15 @@ main {
 
 .top-content select {
   display: flex;
+  font-weight: 400;
+  font-size: 10px;
+  background-color: #fffbf6;
+  color: #585858;
+  justify-content: center;
+  align-items: center;
+
   border: none;
   outline: none;
-  background-color: #fffbf6;
 }
 
 .notifiction {
