--- a/css/report.css
+++ b/css/report.css
@@ -103,7 +103,12 @@ body {
 
 .top-content select {
   display: flex;
+  font-weight: 400;
+  font-size: 10px;
   background-color: #fffbf6;
+  color: #585858;
+  justify-content: center;
+  align-items: center;
 
   border: none;
   outline: none;
