--- a/css/login.css
+++ b/css/login.css
@@ -1,6 +1,6 @@
 * {
   margin: 0;
-  padding: 0;
+  padding: 0.4rem;
   box-sizing: border-box;
 }
 
@@ -26,14 +26,13 @@ body {
   height: 100%;
 }
 
-img {
+/* img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-}
+} */
 button {
   cursor: pointer;
-  background-color: transparent;
   border: none;
   font-family: inherit;
 }
@@ -82,7 +81,7 @@ button {
 form {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 2.3rem;
 }
 .form-group {
   width: 100%;
@@ -203,10 +202,10 @@ form {
   }
 }
 
-.form-icon {
+/* .form-icon {
   width: 2rem;
   height: 2rem;
-}
+} */
 .show {
   background-color: transparent;
   border: none;
@@ -322,7 +321,7 @@ form {
     padding: 20px 0px;
     padding-inline: 0px;
     justify-content: center;
-    margin-bottom: 1.5rem;
+    margin-bottom: 2.5rem;
   }
 
   .reset {
@@ -346,27 +345,28 @@ form {
   }
 
   #myBtn {
-    width: 170px;
-    height: 41px;
+    width: 37rem;
+    height: 5rem;
     border-radius: 5px;
     font-size: 14px;
     font-weight: 600;
-    margin-left: 15px;
-    padding-block: 0px;
-    margin-top: 10px;
+    margin-left: 2rem;
+    padding-block: 10px;
+    /* margin-top: 10px; */
   }
 
   .title-container p {
-    font-size: 15px;
+    font-size: 1.5rem;
     font-weight: 400px;
     color: #000;
-    margin-left: 5px;
+    margin-left: 1rem;
   }
   .title-container h1 {
-    font-size: 30px;
-    font-weight: 600;
+    font-size: 3.2rem;
+    white-space: nowrap;
+    font-weight: 700;
     justify-content: center;
-    margin: 5px;
+    margin: 1rem;
   }
   /* .logo-container img {
     width: 64px;
@@ -374,13 +374,13 @@ form {
     margin-top: 10px;
   } */
   .logo-container img {
-    width: 9.8rem;
-    height: 12.6rem;
+    width: 9.5rem;
+    height: 11.6rem;
   }
 
-  .form-icon {
+  /* .form-icon {
     margin-right: 10px;
-  }
+  } */
 }
 
 /* Override font size for screens 1024px and larger */
