--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -128,7 +128,7 @@ header {
   display: flex;
   justify-content: space-between;
   color: #34475e;
-  padding: 10px;
+  /* padding: 10px; */
 }
 
 header h1 {
@@ -790,7 +790,7 @@ td {
     width: 83px;
     height: 33px;
     margin-top: 0.5rem;
-    margin-left: -15px;
+    margin-left: -1rem;
   }
 
   .overview a,
