--- a/css/createnew.css
+++ b/css/createnew.css
@@ -488,7 +488,8 @@ a {
   .top-content {
     border: none;
     position: fixed;
-    margin-top: 13px;
+    margin-top: 0.9rem;
+    margin-right: 0.1rem;
   }
 
   .top-content img {
