--- a/css/form.css
+++ b/css/form.css
@@ -694,7 +694,8 @@ hr {
   .top-content {
     border: none;
     position: fixed;
-    margin-top: 12px;
+    margin-top: 0.9rem;
+    margin-right: 0.1rem;
   }
 
   .top-content img {
