--- a/css/login.css
+++ b/css/login.css
@@ -1,6 +1,6 @@
 * {
   margin: 0;
-  padding: 0.4rem;
+  padding: 0.1rem;
   box-sizing: border-box;
 }
 
@@ -82,6 +82,12 @@ form {
   display: flex;
   flex-direction: column;
   gap: 2.3rem;
+  /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 8px 16px rgba(0, 0, 0, 0.1),
+    0 16px 32px rgba(0, 0, 0, 0.1); */
+}
+#login-form {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 8px 16px rgba(0, 0, 0, 0.1),
+    0 16px 32px rgba(0, 0, 0, 0.1);
 }
 .form-group {
   width: 100%;
