--- a/css/login.css
+++ b/css/login.css
@@ -240,7 +240,7 @@ form {
   transition: all 0.4s ease-in-out;
 }
 
-.submit:hover {
+#myBtn:hover {
   background-color: #f8963a;
 }
 .right {
@@ -356,8 +356,13 @@ form {
     font-weight: 600;
     /* margin-left: 1.8rem;
     margin-right: 2rem; */
-    padding-block: 10px;
+    padding-block: 8px;
     /* margin-top: 10px; */
+    transition: all 0.3s ease-in-out;
+  }
+
+  #myBtn:hover {
+    background-color: #f8963a;
   }
 
   .title-container p {
