--- a/css/login.css
+++ b/css/login.css
@@ -364,6 +364,7 @@ form {
   #myBtn:hover {
     background-color: #f8963a;
     padding-block: 16px;
+    transform: scale(1.05);
   }
 
   .title-container p {
