--- a/css/createnew.css
+++ b/css/createnew.css
@@ -524,10 +524,10 @@ a {
     cursor: pointer;
   }
 
-  img {
+  /* img {
     width: 2rem;
     height: 1.5rem;
-  }
+  } */
   .top-content select {
     margin-right: 0.5rem;
   }
