--- a/css/createnew.css
+++ b/css/createnew.css
@@ -287,7 +287,7 @@ a {
 
 .x {
   display: block;
-  background-color: #ffff;
+  background-color: #fffbf6;
   border: none;
   width: 48px;
   height: 48px;
