--- a/css/details.css
+++ b/css/details.css
@@ -405,7 +405,7 @@ header .btn-new-inspection {
   align-items: center;
   justify-content: center;
   padding: 10px 15px;
-  background-color: #fff;
+  /* background-color: #fff; */
   border-radius: 5px;
   border: 1px solid #d8d8d8;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
