--- a/css/inspectionlist.css
+++ b/css/inspectionlist.css
@@ -15,6 +15,7 @@ body {
   min-height: 100vh;
   max-width: 100%;
   background-color: #fffbf6;
+  overflow-y: hidden;
 }
 main {
   width: 100%;
@@ -534,10 +535,60 @@ tr {
 
   header .btn-new-inspection {
     padding: 0px;
-    height: 30px;
-    margin-left: 5px;
+    height: 2.3rem;
+    width: 10rem;
+    margin-left: 0.5rem;
     white-space: nowrap;
     font-size: 9px;
+    background: linear-gradient(145deg, #ff9a3a, #ff7a00, #cc6300);
+    border: none;
+    box-shadow: 0 5px 10px rgba(255, 122, 0, 0.3);
+    transition: transform 0.2s, box-shadow 0.2s;
+    animation: gradientBackground 5s ease infinite;
+    overflow: hidden;
+    text-align: center;
+  }
+
+  #create-button::before,
+  #create-button::after {
+    content: "";
+    position: absolute;
+    width: 140%; /* Larger than button to cover it */
+    height: 140%;
+    background: rgba(255, 255, 255, 0.1);
+    transform: rotate(45deg);
+    transition: all 0.5s;
+  }
+
+  #create-button::before {
+    top: -50%;
+    left: -50%;
+    border-radius: 60%;
+  }
+
+  #create-button::after {
+    bottom: -50%;
+    right: -50%;
+    border-radius: 40%;
+  }
+
+  #create-button:hover::before,
+  #create-button:hover::after {
+    top: -70%;
+    left: -70%;
+    bottom: -70%;
+    right: -70%;
+  }
+
+  #create-button:hover {
+    box-shadow: 0 8px 15px rgba(255, 122, 0, 0.4);
+    transform: translateY(-3px);
+    animation: pulse 1s infinite;
+  }
+
+  #create-button:active {
+    box-shadow: 0 5px 10px rgba(255, 122, 0, 0.3);
+    transform: translateY(1px);
   }
 
   .search-sort {
@@ -565,5 +616,9 @@ tr {
   }
   .top-container {
     width: 100%;
+  }
+
+  body {
+    overflow-y: hidden;
   }
 }
