--- a/css/createnew.css
+++ b/css/createnew.css
@@ -139,6 +139,7 @@ header h1 {
   font-weight: 500;
   line-height: 27.61px;
   text-align: left;
+  white-space: nowrap;
   /* margin-left: 37px; */
 }
 
@@ -326,7 +327,8 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 20px;
+  gap: 1rem;
+  border: none;
 }
 
 .option {
@@ -412,7 +414,7 @@ a {
   border: none;
   /* margin-left: 480px; */
   line-height: 17.57px;
-  margin-top: 50px;
+  margin-top: 1rem;
   cursor: not-allowed;
   transition: background-color 0.3s ease;
 }
@@ -462,17 +464,13 @@ a {
 
 @media screen and (max-width: 800px) {
   .inspection-options {
-     display: flex;
-    flex-wrap: wrap;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    overflow-x:hidden;
+    overflow-x: hidden;
   }
 
-  .inspection-options img {
-    /* width: 30rem;
-    height: 15.4rem; */
-  }
   .selection {
     width: 20rem;
   }
@@ -481,7 +479,7 @@ a {
     border: none;
     position: fixed;
   }
-  .container{
+  .container {
     justify-content: right;
   }
 }
@@ -521,5 +519,21 @@ a {
 
   .top-container {
     width: 100%;
+  }
+
+  .create-request {
+    padding: 0px;
+    height: 2.3rem;
+    width: 10rem;
+    margin-left: 0.5rem;
+    white-space: nowrap;
+    font-size: 9px;
+    background: linear-gradient(145deg, #ff9a3a, #ff7a00, #cc6300);
+    border: none;
+    box-shadow: 0 5px 10px rgba(255, 122, 0, 0.3);
+    transition: transform 0.2s, box-shadow 0.2s;
+    animation: gradientBackground 5s ease infinite;
+    overflow: hidden;
+    text-align: center;
   }
 }
