--- a/css/createnew.css
+++ b/css/createnew.css
@@ -404,7 +404,7 @@ a {
 }
 
 .create-request {
-  /* width: 216px; */
+  width: 216px;
   height: 45px;
   border-radius: 5.21px;
   padding: 10px;
@@ -463,6 +463,15 @@ a {
 }
 
 @media screen and (max-width: 800px) {
+  .container {
+    display: flex;
+    align-items: center;
+    justify-content: right;
+    height: 100%;
+    width: 100%;
+    padding: 0px;
+  }
+
   .inspection-options {
     display: flex;
     flex-direction: column;
@@ -488,9 +497,10 @@ a {
   .container {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: right;
     height: 100%;
     width: 100%;
+    padding: 0px;
   }
 
   .top-content {
@@ -502,10 +512,6 @@ a {
 
   .top-content img {
     width: 1rem;
-  }
-  .wrapper .option pre-los img .option post-loss img {
-    width: 1.6rem;
-    height: 0.3rem;
   }
 
   .timeline-item,
@@ -521,13 +527,12 @@ a {
     width: 100%;
   }
 
-  .create-request {
+  #jaju {
     padding: 0px;
-    height: 2.3rem;
-    width: 10rem;
-    margin-left: 0.5rem;
+    height: 6.3rem;
+    width: 50rem;
     white-space: nowrap;
-    font-size: 9px;
+    font-size: 14px;
     background: linear-gradient(145deg, #ff9a3a, #ff7a00, #cc6300);
     border: none;
     box-shadow: 0 5px 10px rgba(255, 122, 0, 0.3);
@@ -535,5 +540,9 @@ a {
     animation: gradientBackground 5s ease infinite;
     overflow: hidden;
     text-align: center;
+  }
+
+  .container {
+    justify-content: right;
   }
 }
