--- a/css/createnew.css
+++ b/css/createnew.css
@@ -529,8 +529,8 @@ a {
 
   #jaju {
     padding: 0px;
-    height: 6.3rem;
-    width: 50rem;
+    /* height: 6.3rem;
+    width: 50rem; */
     white-space: nowrap;
     font-size: 14px;
     background: linear-gradient(145deg, #ff9a3a, #ff7a00, #cc6300);
