--- a/css/createnew.css
+++ b/css/createnew.css
@@ -473,8 +473,8 @@ a {
   }
 
   .inspection-options {
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: column; */
     justify-content: center;
     align-items: center;
     overflow-x: hidden;
