--- a/css/createnew.css
+++ b/css/createnew.css
@@ -473,6 +473,7 @@ a {
   }
 
   .inspection-options {
+    gap: 0px;
     /* display: flex;
     flex-direction: column; */
     justify-content: center;
