--- a/css/form.css
+++ b/css/form.css
@@ -707,16 +707,6 @@ hr {
     overflow-x: hidden;
   }
 
-  /* .success-modal-content div button {
-    background: linear-gradient(145deg, #ff9a3a, #ff7a00, #cc6300);
-    border: none;
-    box-shadow: 0 5px 10px rgba(255, 122, 0, 0.3);
-    transition: transform 0.2s, box-shadow 0.2s;
-    animation: gradientBackground 5s ease infinite;
-    overflow: hidden;
-    text-align: center;
-  } */
-
   .generate-button {
     background: linear-gradient(145deg, #ff9a3a, #ff7a00, #cc6300);
     border: none;
@@ -752,5 +742,15 @@ hr {
     border-radius: 10px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1), 0 0 20px rgba(255, 255, 255, 0.6);
     border: 1px solid rgba(255, 255, 255, 0.3);
+  }
+
+  .success-modal-content div button:last-child {
+    background: linear-gradient(145deg, #ff9a3a, #ff7a00, #cc6300);
+    border: none;
+    box-shadow: 0 5px 10px rgba(255, 122, 0, 0.3);
+    transition: transform 0.2s, box-shadow 0.2s;
+    animation: gradientBackground 5s ease infinite;
+    overflow: hidden;
+    text-align: center;
   }
 }
