--- a/css/createnew.css
+++ b/css/createnew.css
@@ -471,12 +471,12 @@ a {
     padding: 0px;
   }
 
-  .wrapper {
+  .inspection-options {
     display: flex;
-    justify-content: center;
+    gap: 10px;
+    justify-content: left;
     align-items: center;
-    flex-direction: column;
-    width: 100%;
+    overflow-x: hidden;
   }
 
   #jaj img {
@@ -504,16 +504,6 @@ a {
   }
   .container {
     justify-content: right;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .inspection-options {
-    display: flex;
-    /* gap: 10px; */
-    justify-content: center;
-    align-items: center;
-    overflow-x: hidden;
   }
 }
 
@@ -566,10 +556,10 @@ a {
   } */
 
   .container {
-    justify-content: center;
+    justify-content: right;
   }
 
-  #jaj img {
+  /* #jaj img {
     width: 135px;
     height: 154px;
   }
@@ -582,5 +572,5 @@ a {
   #kenya {
     width: 135px;
     height: 154px;
-  }
+  } */
 }
