--- a/css/login.css
+++ b/css/login.css
@@ -85,10 +85,10 @@ form {
   /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 8px 16px rgba(0, 0, 0, 0.1),
     0 16px 32px rgba(0, 0, 0, 0.1); */
 }
-#login-form {
+/* #login-form {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 8px 16px rgba(0, 0, 0, 0.1),
     0 16px 32px rgba(0, 0, 0, 0.1);
-}
+} */
 .form-group {
   width: 100%;
   display: flex;
@@ -232,7 +232,7 @@ form {
   font-weight: bold;
   font-size: 2.4rem;
   font-family: inherit;
-  margin-top: 3rem;
+  margin-top: 1.5rem;
   border: none;
   color: #fff;
   padding-block: 2rem;
