--- a/css/login.css
+++ b/css/login.css
@@ -388,22 +388,23 @@ input {
   }
 
   .title-container p {
-    font-size: 1.5rem;
-    font-weight: 400px;
-    color: #000;
+    font-size: 18px;
+    font-weight: 400;
+    color: #afb0b1;
     margin-left: 1rem;
   }
   .title-container h1 {
-    font-size: 3.2rem;
-    white-space: nowrap;
+    font-size: 42px;
+    white-space: wrap;
+    color: #585858;
     font-weight: 700;
     justify-content: center;
     margin: 1rem;
   }
-  .logo-container img {
-    /* width: 64px; */
-    /* height: 64px; */
-    margin-top: 1.8rem;
+  .left .logo-container {
+    width: 10.8rem;
+    height: 13.6rem;
+    margin-top: -10rem;
   }
   .logo-container img {
     width: 9.5rem;
